# fastapi-react-assets

./: .pre-commit-config.yaml  README.md
backend/: .env.example  .pre-commit-config.yaml  Makefile  pyproject.toml
backend/app/: main.py
backend/app/assets/domain/: asset.py  repository.py
backend/app/assets/domain/entities/: assets_list.py
backend/app/assets/domain/errors/: invalid_list_error.py
backend/app/assets/domain/exceptions/: non_empty_list_exception.py
backend/app/assets/domain/repositories/: assets_list_repository.py
backend/app/assets/domain/services/: interest_rate_avg_calculator.py
backend/app/assets/domain/services/interest_rate_avg_calculator/: errors.py  service.py
backend/app/contexts/assets/application/: get_average_interest_rate.py  save_assets_list.py
backend/app/contexts/assets/containers/: assets_services.py
backend/app/contexts/assets/domain/entities/: asset.py  assets_list.py  errors.py
backend/app/contexts/shared/domain/: entity.py  error.py
backend/app/contexts/shared/infrastructure/: in_memory_database.py
backend/app/core/containers/: container.py
backend/app/core/settings/: config.py
backend/app/shared/domain/: entity.py  exception.py
backend/tests/: conftest.py
backend/tests/integration/assets/: test_get_average_interest_rate.py  test_save_assets_list.py
backend/tests/integration/health/: test_health.py
backend/tests/unit/assets/application/: test_get_average_interest_rate.py  test_save_assets_list.py
backend/tests/unit/assets/domain/: test_interest_rate_avg_calculator.py
frontend/: .prettierignore  (+4 more)
(+47 files in other folders)
